openldap/namespaces-ldap.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ldap
spec: {}
status: {}
