openldap/ldap-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ldap
  namespace: ldap
  labels:
    app: ldap
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
        - name: ldap
          image: osixia/openldap:1.2.1
          ports:
            - containerPort: 389
              name: openldap
          volumeMounts:
            - name: ldap
              mountPath: /var/lib/ldap
              subPath: data
            - name: ldap
              mountPath: /etc/ldap/slapd.d
              subPath: config
            - name: ldap
              mountPath: /container/service/slapd/assets/certs
              subPath: certs
      volumes:
        - name: ldap
          persistentVolumeClaim:
            claimName: openldap
