openldap/ldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldap
  name: ldap-service
  namespace: ldap
spec:
  ports:
    - port: 389
  selector:
    app: ldap
