openldap/phpldapadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: phpldapadmin
  name: phpldapadmin
  namespace: ldap
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
  selector:
    io.kompose.service: phpldapadmin
