openldap/phpldapadmin-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phpldapadmin-ingress
  namespace: ldap
spec:
  rules:
  - host: phpldapadmin.5ik8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: phpldapadmin
          servicePort: 8080
